headers = files([
    'GradientTensor.hpp',
    'Tensor.hpp',
    'TensorUtils.hpp',
    'TensorView.hpp',
    'TensorViewAxisIterator.hpp',
    'TensorViewAxisIteratorImpl.hpp',
    'TensorViewAxisIteratorImplConst.hpp',
    'TensorViewIterator.hpp',
    'TensorViewIteratorImpl.hpp',
    'TensorViewIteratorImplConst.hpp',
    'Utility.hpp'
])

tensor_dep = declare_dependency(
    sources: headers
)
